--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
 
         <service
             android:name=".ScreenCaptureService"
+            android:foregroundServiceType="mediaProjection"
             android:enabled="true"
             android:exported="true" />
 
