--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,47 +18,48 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name="com.example.android_rc.ServiceControlActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <receiver
-            android:name="com.example.android_rc.ServiceStopperBroadcastReceiver"
+            android:name=".ServiceStopperBroadcastReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.example.capture_sender.action.STOP_SERVICE" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
 
         <service
-            android:name="com.example.android_rc.ScreenCaptureService"
+            android:name=".ScreenCaptureService"
             android:enabled="true"
             android:exported="true"
             android:foregroundServiceType="mediaProjection" />
 
         <service
-            android:name="com.example.android_rc.TouchEmulationAccessibilityService"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE" >
+            android:name=".TouchEmulationAccessibilityService"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
+
             <meta-data
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config" />
         </service>
 
         <activity
-            android:name="com.example.android_rc.SettingsActivity"
-            android:label="@string/title_activity_settings" />
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:theme="@style/AppTheme" />
+
     </application>
 
 </manifest>
